templates/redpanda-operator_template.yaml
---
# Source: redpanda-operator/templates/service_metrics.yaml
apiVersion: v1
kind: Service
metadata:
  name: redpanda-operator-metrics-service
  labels:
    app.kubernetes.io/name: redpanda-operator
    helm.sh/chart: redpanda-operator-v23.2.6
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v23.2.6"
    app.kubernetes.io/managed-by: Helm
spec:
  ports:
  - name: https
    port: 8443
    targetPort: https
  selector:
    app.kubernetes.io/name: redpanda-operator
    app.kubernetes.io/instance: release-name
---
# Source: redpanda-operator/templates/service_webhook.yaml
apiVersion: v1
kind: Service
metadata:
  name: redpanda-operator-webhook-service
  labels:
    app.kubernetes.io/name: redpanda-operator
    helm.sh/chart: redpanda-operator-v23.2.6
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v23.2.6"
    app.kubernetes.io/managed-by: Helm
spec:
  ports:
  - port: 443
    targetPort: 9443
  selector:
    app.kubernetes.io/name: redpanda-operator
    app.kubernetes.io/instance: release-name
---
# Source: redpanda-operator/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-redpanda-operator
  labels:
    
    app.kubernetes.io/name: redpanda-operator
    helm.sh/chart: redpanda-operator-v23.2.6
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v23.2.6"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: redpanda-operator
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: redpanda-operator
        app.kubernetes.io/instance: release-name
      annotations:
    spec:
      serviceAccountName: release-name-redpanda-operator
      containers:
      - name: kube-rbac-proxy
        args:
        - --secure-listen-address=0.0.0.0:8443
        - --upstream=http://127.0.0.1:8080/
        - --logtostderr=true
        - --v=10
        image: gcr.io/kubebuilder/kube-rbac-proxy:v0.8.0
        ports:
        - containerPort: 8443
          name: https
      - name: manager
        image: "vectorized/redpanda-operator:v23.2.6"
        imagePullPolicy: IfNotPresent
        args:
        - --health-probe-bind-address=:8081
        - --metrics-bind-address=127.0.0.1:8080
        - --leader-elect
        - --webhook-enabled=true
        command:
        - /manager
        ports:
        - containerPort: 9443
          name: webhook-server
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /healthz/
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
        securityContext:
          allowPrivilegeEscalation: false
        volumeMounts:
        - mountPath: /tmp/k8s-webhook-server/serving-certs
          name: cert
          readOnly: true
        resources:
            {}
      securityContext:
        runAsUser: 65532
      terminationGracePeriodSeconds: 10
      volumes:
      - name: cert
        secret:
          defaultMode: 420
          secretName: webhook-server-cert
---
# Source: redpanda-operator/templates/mutating_webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: default/redpanda-serving-cert
  name: release-name-redpanda-operator-mutating-webhook-configuration
webhooks:
  - admissionReviewVersions:
    - v1
    - v1beta1
    clientConfig:
      service:
        name: redpanda-operator-webhook-service
        namespace: default
        path: /mutate-redpanda-vectorized-io-v1alpha1-cluster
    failurePolicy: Fail
    name: mcluster.kb.io
    rules:
    - apiGroups:
      - redpanda.vectorized.io
      apiVersions:
      - v1alpha1
      operations:
      - CREATE
      - UPDATE
      resources:
      - clusters
    sideEffects: None
---
# Source: redpanda-operator/templates/validating_webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: default/redpanda-serving-cert
  name: release-name-redpanda-operator-validating-webhook-configuration
webhooks:
  - admissionReviewVersions:
    - v1
    - v1beta1
    clientConfig:
      service:
        name: redpanda-operator-webhook-service
        namespace: default
        path: /validate-redpanda-vectorized-io-v1alpha1-cluster
    failurePolicy: Fail
    name: mcluster.kb.io
    rules:
    - apiGroups:
      - redpanda.vectorized.io
      apiVersions:
      - v1alpha1
      operations:
      - CREATE
      - UPDATE
      resources:
      - clusters
    sideEffects: None
